assets/css/main.css
/* ... */
		@media screen and (max-width: 980px) {

			#footer {
				padding: 4em 3em 2em 3em ;
				display: block;
				margin: 0 0 3em 0;
				width: 100%;
			}

				#footer > * {
					width: 100%;
					margin-left: 0;
					margin-bottom: 3em;
				}

				#footer .copyright {
					text-align: left;
				}

		}

		@media screen and (max-width: 736px) {

			#footer {
				padding: 3em 2em 1em 2em ;
			}

		}

		@media screen and (max-width: 480px) {

			#footer {
				padding: 3em 1.5em 1em 1.5em ;
			}

		}

		@media screen and (max-width: 480px) {

			#footer {
				padding: 2.5em 1em 0.5em 1em ;
			}

		}

/* Wrapper */

	#wrapper {
		width: 64em;
		max-width: calc(100% - 4em);
		margin: 0 auto;
	}

		@media screen and (max-width: 480px) {

			#wrapper {
				max-width: calc(100% - 2em);
			}

		}

		@media screen and (max-width: 360px) {

			#wrapper {
				max-width: 100%;
			}

		}



		/* test */



		/* Company Timeline */

.timeline-container  {
  max-width: 1024px;
  width: 90%;
  margin: 0 auto;
}

.timeline-item {
  padding: 3em 2em 2em;
  position: relative;
  border-left: 2px solid #935d8c;
}

.timeline-item::before {
  content: attr(date-is);
  position: absolute;
  left: 1em;
  font-weight: bold;
  top: .1em;
  display: block;
  font-size: 1.25rem;
    /* color: #1f78e6; */
		color: #935d8c;
}

.timeline-item::after {
  width: 15px;
  height: 15px;
  display: block;
  top: 1em;
  position: absolute;
  left: -9px;
  border-radius: 10px;
  content: '';
  border: 1px dotted #935d8c;
  background: #935d8c;
}

.timeline-item-primary {
	text-align: left;
}

.timeline-list-item {
	text-align: left;
	font-size:1.1rem;

}

li {
	color: #935d8c;
}

li span { color: black; }

